--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,8 @@
-altair==4.1.0
-appnope==0.1.2
-argon2-cffi==20.1.0
-astor==0.8.1
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
-base58==2.1.0
-bleach==3.3.0
-blinker==1.4
-brotlipy==0.7.0
-cachetools==4.2.1
-certifi==2020.12.5
-cffi @ file:///opt/concourse/worker/volumes/live/0ef369cc-6ba0-47e7-75da-208c6400381d/volume/cffi_1613246948181/work
-chardet @ file:///opt/concourse/worker/volumes/live/c798b2ee-88b1-4341-6830-161a92c2399e/volume/chardet_1607706832595/work
-click @ file:///home/linux1/recipes/ci/click_1610990599742/work
-cryptography @ file:///opt/concourse/worker/volumes/live/61d16c80-891a-48c5-6376-6899ef51ea28/volume/cryptography_1613401441154/work
-decorator==4.4.2
-defusedxml==0.6.0
-dnspython==1.16.0
-docopt==0.6.2
-entrypoints==0.3
-gitdb==4.0.5
-GitPython==3.1.13
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-ipykernel==5.5.0
-ipython==7.20.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==2.11.3
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-jsonschema==3.2.0
-jupyter-client==6.1.11
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-MarkupSafe==1.1.1
-mistune==0.8.4
-nbclient==0.5.2
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-notebook==6.2.0
-numpy==1.20.1
-packaging==20.9
-pandas==1.2.2
-pandocfilters==1.4.3
-parso==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.1.0
-pipreqs==0.4.10
-pmaw==1.0.3
-prometheus-client==0.9.0
-prompt-toolkit==3.0.16
-protobuf==3.15.2
-ptyprocess==0.7.0
-pyarrow==3.0.0
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pydeck==0.6.1
-Pygments==2.8.0
-pymongo==3.11.3
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing==2.4.7
-pyrsistent==0.17.3
-PySocks @ file:///opt/concourse/worker/volumes/live/85a5b906-0e08-41d9-6f59-084cee4e9492/volume/pysocks_1594394636991/work
-python-dateutil==2.8.1
-pytz==2021.1
-pyzmq==22.0.3
-regex @ file:///opt/concourse/worker/volumes/live/c84a6349-3315-46e4-634b-b5582dea058b/volume/regex_1606691109605/work
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-Send2Trash==1.5.0
-six @ file:///opt/concourse/worker/volumes/live/5b31cb27-1e37-4ca5-6e9f-86246eb206d2/volume/six_1605205320872/work
-smmap==3.0.5
-streamlit==0.77.0
-terminado==0.9.2
-testpath==0.4.4
-toml==0.10.2
-toolz==0.11.1
-tornado==6.1
-tqdm @ file:///tmp/build/80754af9/tqdm_1611857934208/work
-traitlets==5.0.5
-tzlocal==2.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1611694770489/work
-validators==0.18.2
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-XlsxWriter @ file:///home/ktietz/src/ci_ipy2/xlsxwriter_1612556818988/work
-yarg==0.1.9
+nltk
+numpy
+pandas
+pmaw
+pymongo
+streamlit
+dnspython
+XlsxWriter
