--- a/conda_requirements.yml
+++ b/conda_requirements.yml
@@ -20,6 +20,7 @@ dependencies:
   - python=3.8.5=h26836e1_1
   - readline=8.1=h9ed2024_0
   - regex=2020.11.13=py38h9ed2024_0
+  - schedule=1.0.0=pyh44b312d_0
   - setuptools=52.0.0=py38hecd8cb5_0
   - sqlite=3.33.0=hffcf06c_0
   - tk=8.6.10=hb0a8c7a_0
@@ -29,79 +30,80 @@ dependencies:
   - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h1de35cc_3
   - pip:
-      - altair==4.1.0
-      - appnope==0.1.2
-      - argon2-cffi==20.1.0
-      - astor==0.8.1
-      - async-generator==1.10
-      - attrs==20.3.0
-      - backcall==0.2.0
-      - base58==2.1.0
-      - bleach==3.3.0
-      - blinker==1.4
-      - cachetools==4.2.1
-      - cffi==1.14.5
-      - chardet==4.0.0
-      - decorator==4.4.2
-      - defusedxml==0.6.0
-      - entrypoints==0.3
-      - gitdb==4.0.5
-      - gitpython==3.1.13
-      - idna==2.10
-      - ipykernel==5.5.0
-      - ipython==7.20.0
-      - ipython-genutils==0.2.0
-      - ipywidgets==7.6.3
-      - jedi==0.18.0
-      - jinja2==2.11.3
-      - jsonschema==3.2.0
-      - jupyter-client==6.1.11
-      - jupyter-core==4.7.1
-      - jupyterlab-pygments==0.1.2
-      - jupyterlab-widgets==1.0.0
-      - markupsafe==1.1.1
-      - mistune==0.8.4
-      - nbclient==0.5.2
-      - nbconvert==6.0.7
-      - nbformat==5.1.2
-      - nest-asyncio==1.5.1
-      - notebook==6.2.0
-      - numpy==1.20.1
-      - packaging==20.9
-      - pandas==1.2.2
-      - pandocfilters==1.4.3
-      - parso==0.8.1
-      - pexpect==4.8.0
-      - pickleshare==0.7.5
-      - pillow==8.1.0
-      - pmaw==1.0.3
-      - prometheus-client==0.9.0
-      - prompt-toolkit==3.0.16
-      - protobuf==3.15.2
-      - ptyprocess==0.7.0
-      - pyarrow==3.0.0
-      - pycparser==2.20
-      - pydeck==0.6.1
-      - pygments==2.8.0
-      - pyparsing==2.4.7
-      - pyrsistent==0.17.3
-      - python-dateutil==2.8.1
-      - pytz==2021.1
-      - pyzmq==22.0.3
-      - requests==2.25.1
-      - send2trash==1.5.0
-      - six==1.15.0
-      - smmap==3.0.5
-      - streamlit==0.77.0
-      - terminado==0.9.2
-      - testpath==0.4.4
-      - toml==0.10.2
-      - toolz==0.11.1
-      - tornado==6.1
-      - traitlets==5.0.5
-      - tzlocal==2.1
-      - urllib3==1.26.3
-      - validators==0.18.2
-      - wcwidth==0.2.5
-      - webencodings==0.5.1
-      - widgetsnbextension==3.5.1
+    - altair==4.1.0
+    - appnope==0.1.2
+    - argon2-cffi==20.1.0
+    - astor==0.8.1
+    - async-generator==1.10
+    - attrs==20.3.0
+    - backcall==0.2.0
+    - base58==2.1.0
+    - bleach==3.3.0
+    - blinker==1.4
+    - cachetools==4.2.1
+    - cffi==1.14.5
+    - chardet==4.0.0
+    - decorator==4.4.2
+    - defusedxml==0.6.0
+    - entrypoints==0.3
+    - gitdb==4.0.5
+    - gitpython==3.1.13
+    - idna==2.10
+    - ipykernel==5.5.0
+    - ipython==7.20.0
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.6.3
+    - jedi==0.18.0
+    - jinja2==2.11.3
+    - jsonschema==3.2.0
+    - jupyter-client==6.1.11
+    - jupyter-core==4.7.1
+    - jupyterlab-pygments==0.1.2
+    - jupyterlab-widgets==1.0.0
+    - markupsafe==1.1.1
+    - mistune==0.8.4
+    - nbclient==0.5.2
+    - nbconvert==6.0.7
+    - nbformat==5.1.2
+    - nest-asyncio==1.5.1
+    - notebook==6.2.0
+    - numpy==1.20.1
+    - packaging==20.9
+    - pandas==1.2.2
+    - pandocfilters==1.4.3
+    - parso==0.8.1
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - pillow==8.1.0
+    - pmaw==1.0.3
+    - prometheus-client==0.9.0
+    - prompt-toolkit==3.0.16
+    - protobuf==3.15.2
+    - ptyprocess==0.7.0
+    - pyarrow==3.0.0
+    - pycparser==2.20
+    - pydeck==0.6.1
+    - pygments==2.8.0
+    - pyparsing==2.4.7
+    - pyrsistent==0.17.3
+    - python-dateutil==2.8.1
+    - pytz==2021.1
+    - pyzmq==22.0.3
+    - requests==2.25.1
+    - send2trash==1.5.0
+    - six==1.15.0
+    - smmap==3.0.5
+    - streamlit==0.77.0
+    - terminado==0.9.2
+    - testpath==0.4.4
+    - toml==0.10.2
+    - toolz==0.11.1
+    - tornado==6.1
+    - traitlets==5.0.5
+    - tzlocal==2.1
+    - urllib3==1.26.3
+    - validators==0.18.2
+    - wcwidth==0.2.5
+    - webencodings==0.5.1
+    - widgetsnbextension==3.5.1
+prefix: /opt/homebrew/Caskroom/miniconda/base/envs/WSB-reasoner
