--- a/conda_requirements.yml
+++ b/conda_requirements.yml
@@ -4,31 +4,31 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - ca-certificates=2021.1.19=hecd8cb5_0
-  - certifi=2020.12.5=py38hecd8cb5_0
-  - click=7.1.2=pyhd3eb1b0_0
-  - dnspython=1.16.0=py38_0
-  - joblib=1.0.1=pyhd3eb1b0_0
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - ncurses=6.2=h0a44026_1
-  - nltk=3.5=py_0
-  - openssl=1.1.1j=h9ed2024_0
-  - pip=21.0.1=py38hecd8cb5_0
-  - pymongo=3.11.3=py38h23ab428_0
-  - python=3.8.5=h26836e1_1
-  - readline=8.1=h9ed2024_0
-  - regex=2020.11.13=py38h9ed2024_0
-  - schedule=1.0.0=pyh44b312d_0
-  - setuptools=52.0.0=py38hecd8cb5_0
-  - sqlite=3.33.0=hffcf06c_0
-  - tk=8.6.10=hb0a8c7a_0
-  - tqdm=4.56.0=pyhd3eb1b0_0
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - xlsxwriter=1.3.7=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h1de35cc_3
+  - ca-certificates=2021.1.19
+  - certifi=2020.12.5
+  - click=7.1.2
+  - dnspython=1.16.0
+  - joblib=1.0.1
+  - libcxx=10.0.0
+  - libedit=3.1.20191231
+  - libffi=3.3
+  - ncurses=6.2
+  - nltk=3.5
+  - openssl=1.1.1j
+  - pip=21.0.1
+  - pymongo=3.11.3
+  - python=3.8.5
+  - readline=8.1
+  - regex=2020.11.13
+  - schedule=1.0.0
+  - setuptools=52.0.0
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - tqdm=4.56.0
+  - wheel=0.36.2
+  - xlsxwriter=1.3.7
+  - xz=5.2.5
+  - zlib=1.2.11
   - pip:
     - altair==4.1.0
     - appnope==0.1.2
